[package]
authors = ["bRad <brad@humanenginuity.com>"]
categories = []
edition = "2018"
keywords = []
license = "MIT OR Apache-2.0"
name = "coding_workshop_toy_car"
readme = "README.md"
repository = "https://github.com/u007d/coding_workshop_toy_car"
version = "0.1.0"

[dependencies]
derive_more = "*"
rppal = { git = "https://github.com/golemparts/rppal.git", features = ["hal"] }

[dev-dependencies]
pretty_assertions = "*"
[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false

[profile.test]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
rpath = false
